Fix rightAnswersCount bug and made gap between answers

--- a/cssFiles/quizStyle.css
+++ b/cssFiles/quizStyle.css
@@ -242,6 +242,7 @@ body {
 .box .answers-rev {
     display: flex;
     flex-direction: column;
+    gap: 5px;
     color: var(--darkTwo);
     margin: 10px 0 0 0;
 
